# mbot-coms

./: Makefile  README.md
bluetooth/: README.md
gazebo/brain/: CMakeLists.txt  brain.cc  rg_robot.cc
models/: README.md
ranger/: Makefile  sim.sh
ranger/SerialComms/: CMakeLists.txt  Makefile  README.md  SerialController.cpp  commands.cpp  commands.h  master.cc  run.cpp  slave.cc  subsystems.h
ranger/brain/: CMakeLists.txt  Makefile  brain.cc  brain.cpp  gz_robot.cc  i2c.cpp  i2c.h  ranger.cc  ranger.cpp  ranger.hh  rg_robot.cc  robot.hh
ranger/brain/ranger-firmware/: ranger-firmware.ino
ranger/firmware/: Makefile  firmware.ino
ranger/mazegen/: template.xml.erb
ranger/models/microphone_sensor/: model.config
ranger/models/tankbot/: model.rsdf
ranger/plugins/: Makefile
ranger/plugins/microphone_control/: .gitignore  microphone_control.cc
ranger/plugins/tank_control/: .gitignore
ranger/scripts/: CMakeLists.txt  Makefile  SerialController.h  commands.h  run.cc  subsystems.cc  subsystems.h
ranger/scripts/Bitbloq/: BitbloqAuriga.cc  BitbloqAuriga.h  BitbloqBot.cc  BitbloqBot.h  BitbloqRanger.cc  BitbloqRanger.h  README.md  run.ino
ranger/scripts/SerialComms/: master.cc  slave.cc
ranger/scripts/default/: default.ino
ranger/scripts/move/: move.ino
ranger/scripts/pid_control/: pid_pos.ino  pid_speed.ino
ranger/scripts/run/: SerialController.cpp  SerialController.h  commands.cpp  run.cpp  subsystems.cpp  (+1 more)
scripts/: Subsystems.cc  Subsystems.h  commands.cc  default.ino  move.ino  readings.ino
scripts/SerialLight.ino/: SerialLight.ino.ino
(+1 files in other folders)
